add list-callsigns.ipynb, ignore UL20192915978.txt

--- a/scrape-apps_by_callsign.ipynb
+++ b/scrape-apps_by_callsign.ipynb
@@ -191,7 +191,7 @@
     "        firefox.find_element_by_xpath(next_page_xpath).click()\n",
     "        # ... wait for load\n",
     "        WebDriverWait(firefox, 15).until(lambda _: firefox.execute_script(\"return document.readyState\") == \"complete\")\n",
-    "        # .. and scrape\n",
+    "        # .. and scrape \n",
     "        innerHTML = firefox.execute_script(\"return document.body.innerHTML\")\n",
     "        table_data += scrape_table_page(innerHTML)\n",
     "\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,9 +232,9 @@
      "output_type": "stream",
      "text": [
       "LOG[INFO]: START KNKN555 \n",
-      "LOG[INFO]: END KNKN555 (34.647709 seconds)\n",
+      "LOG[INFO]: END KNKN555 (21.644037 seconds)\n",
       "LOG[INFO]: START KNKN556 \n",
-      "LOG[INFO]: END KNKN556 (32.195880 seconds)\n"
+      "LOG[INFO]: END KNKN556 (23.465402 seconds)\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['62150CLMP99', 'KNKN556', 'PENNSYLVANIA CELLULAR TELEPHONE CORP. CELLULAR ONE', '0001944032', 'New', '', 'CL', '01/01/1980', 'Granted']\n"
+      "['60923CLMP99', 'KNKN555', 'WIRELESS ONE HOLDING COMPANY, L.P. CELLULAR ONE OF SOUTHWEST FLORIDA', '0001733369', 'New', '', 'CL', '01/01/1980', 'Granted']\n"
      ]
     }
    ],
@@ -279,23 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0000083337', '', 'AT&T Wireless Services of Florida, Inc.', '', 'Assignment of Authorization', '', 'AL', '02/18/2000', 'Consummated']\n",
-      "['0000214527', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Renewal/Modification', '', 'CL', '09/05/2000', 'Granted']\n",
-      "['0000287045', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Duplicate License', '', 'CL', '12/08/2000', 'Granted']\n",
-      "['0000326671', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Duplicate License', '', 'CL', '01/16/2001', 'Granted']\n",
-      "['0000446751', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Administrative Update', '', 'CL', '05/02/2001', 'Granted']\n",
-      "['0000545823', '', 'AT&T Wireless Services, Inc.', '0004122032', 'Transfer of Control', '', 'AL', '08/01/2001', 'Inactive']\n",
-      "['0000545823', '', 'AT&T Wireless Services, Inc.', '0004122032', 'Amendment', '(Transfer of Control)', 'AL', '12/20/2001', 'Granted']\n",
-      "['0000949139', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Modification', '', 'CL', '07/02/2002', 'Inactive']\n",
-      "['0000949139', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Amendment', '(Modification)', 'CL', '07/18/2002', 'Inactive']\n",
-      "['0000949139', 'KNKN555', 'AT&T Wireless Services of Florida, Inc.', '', 'Amendment', '(Modification)', 'CL', '11/14/2002', 'Granted']\n"
+      "[]\n",
+      "['0000386266', '', 'AT&T Wireless Services, Inc.', '0004122032', 'Transfer of Control', '', 'AL', '03/05/2001', 'Granted']\n",
+      "['0000388274', 'KNKN556', 'Pennsylvania Cellular Telephone Corp.', '0001944032', 'Administrative Update', '', 'CL', '03/06/2001', 'Granted']\n",
+      "['0000547695', '', 'AT&T Wireless Services, Inc.', '0004122032', 'Transfer of Control', '', 'AL', '08/02/2001', 'Granted']\n",
+      "['0000591187', 'KNKN556', 'Pennsylvania Cellular Telephone Corp.', '0001944032', 'Renewal/Modification', '', 'CL', '09/13/2001', 'Granted']\n",
+      "['0000788563', 'KNKN556', 'Pennsylvania Cellular Telephone Corp.', '0001944032', 'Administrative Update', '', 'CL', '02/27/2002', 'Granted']\n",
+      "['0001093516', 'KNKN556', 'Pennsylvania Cellular Telephone Corp.', '0001944032', 'Administrative Update', '', 'CL', '11/18/2002', 'Granted']\n",
+      "['0001178597', '', 'Winston, LLC', '0003297520', 'Transfer of Control', '', 'AL', '01/29/2003', 'Granted']\n",
+      "['0001179154', '', 'Vanguard Cellular Pennsylvania, LLC', '0001944032', 'Assignment of Authorization', '', 'AL', '01/30/2003', 'Granted']\n",
+      "['0001656573', '', 'Cingular Wireless Corporation', '0005823844', 'Transfer of Control', '', 'AL', '03/18/2004', 'Inactive']\n"
      ]
     }
    ],
