--- a/AMEND-cma-scrape.ipynb
+++ b/AMEND-cma-scrape.ipynb
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_mkt_code(soup):\n",
     "    '''\n",
-    "    Extracts the market code (CMA) from market search results page\n",
+    "    Helper funciton that extracts the market code (CMA) from market search results page\n",
     "    '''\n",
     "    \n",
     "    # tag attributes for element containing \"Market Code = \" \n",
@@ -266,7 +266,9 @@
    "source": [
     "def loop_scrape_table_for_cma(list_cma, max_tries=3, wait_query=True, wait_retry=True):\n",
     "    '''\n",
-    "    Attempts to scrape for cma codes in `list_cma` up to `max_tries`\n",
+    "    Attempts to scrape for cma codes in `list_cma` up to `max_tries`. \n",
+    "    Caches .html for each search.\n",
+    "    Returns\n",
     "    '''\n",
     "    try:\n",
     "        # start search & tries counter\n",
