Archive code for scraping callsigns by CMA
Added archive directory for code from development stages, or production runs
Renamed initial scrape from scrape-callsigns_by_cma to scrape-cma_01
Renamed amendement scrape from AMEND-cma-scrape to scrape-cma_02.ipynb

--- a/archive/scrape-cma_01.ipynb
+++ b/archive/scrape-cma_01.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FCC CMA Scraping"
+    "# [Archive] FCC CMA Scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NOTE\n",
+    "\n",
+    "This is an archive of initial attempts at scraping callsign search results for 734 Cellular Market Areas.\n",
+    "* See REF_ULS-LicenseDatabase-scraping.ipynb for clean reference code"
    ]
   },
   {
@@ -14,9 +24,7 @@
     "## Set up selenium webdriver with Firefox\n",
     "* Download Firefox driver [geckodriver](https://github.com/mozilla/geckodriver/releases) for selenium\n",
     "* Move the driver executable into the same directory as this notebook (or update the path to the executable in `scrape_table_for_call_sign`)\n",
-    "* `pip install selenium`\n",
-    "\n",
-    "-- see scrape-apps_by_callsign.ipynb for more details"
+    "* `pip install selenium`"
    ]
   },
   {
