--- a/archive/scrape-cma_02.ipynb
+++ b/archive/scrape-cma_02.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FCC CMA Scraping (AMEND)"
+    "# [ARCHIVE] FCC CMA Scraping - AMENDMENT"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NOTE: This is a re-run of scraping functions for CMA's with results equal to 10\n",
-    "* see scrape-callsigns_by_cma.ipynb for initial searchs"
+    "## NOTE\n",
+    "\n",
+    "This is a re-run of scraping for CMA's with results equal to 10, due to ommission of pagination in first run\n",
+    "* See scrape-callsigns_by_cma.ipynb for initial searchs\n",
+    "* See REF_ULS-LicenseDatabase-scraping.ipynb for reference code"
    ]
   },
   {
@@ -80,7 +83,7 @@
    "source": [
     "def extract_mkt_code(soup):\n",
     "    '''\n",
-    "    Helper funciton that extracts the market code (CMA) from market search results page\n",
+    "    Helper function that extracts the market code (CMA) from market search results page\n",
     "    '''\n",
     "    \n",
     "    # tag attributes for element containing \"Market Code = \" \n",
@@ -268,7 +271,7 @@
     "    '''\n",
     "    Attempts to scrape for cma codes in `list_cma` up to `max_tries`. \n",
     "    Caches .html for each search.\n",
-    "    Returns\n",
+    "    Returns all data in loop\n",
     "    '''\n",
     "    try:\n",
     "        # start search & tries counter\n",
