--- a/archive/scrape-callsignHistory_00.ipynb
+++ b/archive/scrape-callsignHistory_00.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FCC Application Scraping"
+    "# [ARCHIVE] FCC Application Scraping"
    ]
   },
   {
